# PKES

./: README.md
PKES_3_interrupts/: GlidingAverage.h  Integrator.h  PKES_3_interrupts.ino  PKES_3_interrupts.ino.mega.hex  PKES_3_interrupts.ino.with_bootloader.mega.hex
PKES_3_part_fusor/: PKES_3_part_fusor.ino
PKES_PM/: wonki.cpp.mega.hex  wonki.ino
alt/: Gyroscope.h
asciitest/: asciitest.cpp.mega.hex  asciitest.ino
aufgabe4 float scheint zu funktionieren/: aufgabe4tofloat.ino  aufgabe4tofloat.ino.mega.hex  aufgabe4tofloat.ino.with_bootloader.mega.hex  odometry.cpp  odometry.h  pidcontrol.cpp  pidcontrol.h
aufgabe4_float_serial_input/: InputEvent.h  aufgabe4_float_serial_input.ino  aufgabe4_float_serial_input.kdev4  average_ring.h  inputhandler.cpp  inputhandler.h  pidcontrol.h
aufgabe4_float_serial_input_clion/: aufgabe4_float_serial_input_clion.ino  aufgabe4_float_serial_input_clion.ino.mega.hex  aufgabe4_float_serial_input_clion.ino.with_bootloader.mega.hex  pidcontrol.cpp  pidcontrol.h
aufgabe4_float_serial_input_clion_funktioniert_ein_rad_drehung/: aufgabe4_float_serial_input_clion.ino  aufgabe4_float_serial_input_clion.ino.mega.hex  aufgabe4_float_serial_input_clion.ino.with_bootloader.mega.hex  inputhandler.cpp  motor.cpp  motor.h  odometry.cpp
aufgabe4_float_serial_input_clion_funktioniert_warum_auch_immer/: CMakeLists.txt  aufgabe4_float_serial_input_clion.ino.mega.hex  aufgabe4_float_serial_input_clion.ino.with_bootloader.mega.hex  inputhandler.cpp  motor.cpp  odometry.h  pidcontrol.h
aufgabe4tofloat (copy 0)/: aufgabe4tofloat.ino  (+3 more)
(+300 files in other folders)
